// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`targetName renders 0 1`] = `
Array [
  .c0 {
  target-name: 0;
}

<div
    className="c0"
  />,
  .c0 {
  target-name: 0;
}

<div
    className="c0"
  />,
  .c0 {
  target-name: 0;
}

<div
    className="c0"
  />,
  .c0 {
  target-name: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`targetName renders function 1`] = `
Array [
  .c0 {
  target-name: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  target-name: has;
}

<div
    className="c0"
  />,
  .c0 {
  target-name: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  target-name: has;
}

<div
    className="c0"
  />,
]
`;

exports[`targetName renders invalid theme path 1`] = `
Array [
  .c0 {
  target-name: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  target-name: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  target-name: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  target-name: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`targetName renders negative number 1`] = `
Array [
  .c0 {
  target-name: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  target-name: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  target-name: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  target-name: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`targetName renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  target-name: July;
}

@media screen and (min-width:November) {
  .c0 {
    target-name: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    target-name: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    target-name: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    target-name: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  target-name: July;
}

@media screen and (min-width:November) {
  .c0 {
    target-name: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    target-name: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    target-name: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    target-name: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  target-name: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    target-name: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    target-name: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    target-name: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    target-name: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  target-name: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    target-name: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    target-name: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    target-name: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    target-name: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`targetName renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    target-name: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    target-name: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    target-name: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    target-name: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    target-name: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    target-name: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    target-name: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    target-name: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    target-name: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    target-name: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    target-name: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    target-name: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    target-name: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    target-name: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    target-name: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    target-name: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`targetName renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  target-name: July;
}

@media May {
  .c0 {
    target-name: August;
  }
}

@media April {
  .c0 {
    target-name: September;
  }
}

@media January {
  .c0 {
    target-name: November;
  }
}

@media April {
  .c0 {
    target-name: August;
  }
}

@media June {
  .c0 {
    target-name: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  target-name: July;
}

@media May {
  .c0 {
    target-name: August;
  }
}

@media April {
  .c0 {
    target-name: September;
  }
}

@media January {
  .c0 {
    target-name: November;
  }
}

@media April {
  .c0 {
    target-name: August;
  }
}

@media June {
  .c0 {
    target-name: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  target-name: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    target-name: November;
  }
}

@media April {
  .c0 {
    target-name: January;
  }
}

@media January {
  .c0 {
    target-name: December;
  }
}

@media April {
  .c0 {
    target-name: April;
  }
}

@media June {
  .c0 {
    target-name: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  target-name: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    target-name: November;
  }
}

@media April {
  .c0 {
    target-name: January;
  }
}

@media January {
  .c0 {
    target-name: December;
  }
}

@media April {
  .c0 {
    target-name: April;
  }
}

@media June {
  .c0 {
    target-name: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`targetName renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    target-name: July;
  }
}

@media April {
  .c0 {
    target-name: August;
  }
}

@media January {
  .c0 {
    target-name: September;
  }
}

@media April {
  .c0 {
    target-name: November;
  }
}

@media June {
  .c0 {
    target-name: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    target-name: July;
  }
}

@media April {
  .c0 {
    target-name: August;
  }
}

@media January {
  .c0 {
    target-name: September;
  }
}

@media April {
  .c0 {
    target-name: November;
  }
}

@media June {
  .c0 {
    target-name: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    target-name: January;
  }
}

@media April {
  .c0 {
    target-name: December;
  }
}

@media January {
  .c0 {
    target-name: April;
  }
}

@media April {
  .c0 {
    target-name: May;
  }
}

@media June {
  .c0 {
    target-name: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    target-name: January;
  }
}

@media April {
  .c0 {
    target-name: December;
  }
}

@media January {
  .c0 {
    target-name: April;
  }
}

@media April {
  .c0 {
    target-name: May;
  }
}

@media June {
  .c0 {
    target-name: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`targetName renders postitive number 1`] = `
Array [
  .c0 {
  target-name: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  target-name: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  target-name: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  target-name: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`targetName renders string 1`] = `
Array [
  .c0 {
  target-name: July;
}

<div
    className="c0"
  />,
  .c0 {
  target-name: July;
}

<div
    className="c0"
  />,
  .c0 {
  target-name: June;
}

<div
    className="c0"
  />,
  .c0 {
  target-name: June;
}

<div
    className="c0"
  />,
]
`;

exports[`targetName renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`targetName renders valid theme path 1`] = `
Array [
  .c0 {
  target-name: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  target-name: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  target-name: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  target-name: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
